github logo added

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                   Hardcore: 30 × 16 field with 99 mines
                 </label>
               </div>
+
               <div class="form-group">
                 <button type="submit" id="submit-button" class="btn btn-default">Start game</button>
               </div>
@@ -61,7 +62,11 @@
         </div>
       </div>
     </div>
-
+  </div>
+  <div class="row footer">
+    <div class="col-md-12">
+      <a href="http://www.github.com/olivierrg"><img src="img/gh-mark.png"></a>
+    </div>
   </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="minesweeper.js"></script>
