--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="col-md-3"></div>
       <div class="col-md-6">
         <h1>A Good Old Minesweeper Game</h1>
-        <div id="timer"></div>
+        <h3 id="status"></h3>
         <form class="form-horizontal" id="startform" role="form">
             <h2>Select your mode</h2>
             <div id="form-content">
